# llm-comparator

./: README.md  build.mjs  package-lock.json  package.json  tsconfig.json
client/: app.ts  core.ts  index.ts
client/components/: bar_chart.css  bar_chart.ts  charts.ts  custom_functions.css  custom_functions.ts  dataset_selection.css  dataset_selection.ts  example_details.css  example_details.ts  example_table.css  example_table.ts  histogram.css  histogram.ts  metrics_by_slice.css  metrics_by_slice.ts  rationale_summary.css  rationale_summary.ts  score_histogram.ts  settings.css  settings.ts  toolbar.css  toolbar.ts
client/lib/: constants.ts  shared_styles.css  types.ts  utils.ts  utils_test.ts
client/services/: custom_function_service.ts  service.ts  state_service.ts
docs/: dev_sources.concat.js  dev_sources.concat.js.map  index.html
docs/data/: example_tiny.json
python/: README.md  pyproject.toml
python/notebooks/: basic_demo.ipynb  run_scripts_for_llm_comparator.ipynb
python/src/llm_comparator/: _colab.py  _logging.py  comparison.py  llm_judge_runner.py  model_helper.py  prompt_templates.py  rationale_bullet_generator.py  rationale_cluster_generator.py  types.py  utils.py  utils_test.py
python/src/llm_comparator/data/: dev_sources.concat.js
